# ur5_gazebo

./: README.md  package.xml
launch/: BRICKS.launch
models/X1-Y1-Z2/: model.sdf
models/X1-Y2-Z1/: model.sdf
models/X1-Y2-Z2/: model.sdf
models/X1-Y2-Z2-CHAMFER/: model.sdf
models/X1-Y2-Z2-TWINFILLET/: model.sdf
models/X1-Y3-Z2/: model.sdf
models/X1-Y3-Z2-FILLET/: model.sdf
models/X1-Y4-Z1/: model.sdf
models/X1-Y4-Z2/: model.sdf
models/X2-Y2-Z2/: model.sdf
models/X2-Y2-Z2-FILLET/: model.sdf
models/end_table_left/: model.sdf
models/end_table_left/materials/scripts/: table_left.material
models/end_table_right/: model.sdf
models/end_table_right/materials/scripts/: table_right.material
msg/: brick.msg
spawner/: delete.py  prova.py  prova1.py  spawner_2.py  spawner_final.py  spawner_pcd.py
worlds/: brickless.world  final.world  gazebo.world  ur5_world_final1.world  ur5_world_final2.world
