<?xml version="1.0"?>
<package format="2">
  <name>ur5_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo package to spawn a gazebo world, ur5 arm robot and lego blocks</description>

  <maintainer email="giovanni.lunard@studenti.unitn.it">Giovanni Lunardi</maintainer>
  <author email="giovanni.lunard@studenti.unitn.it">Giovanni Lunardi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur5_description</exec_depend>
  <exec_depend>robotiq_gazebo</exec_depend>

  <export>
  </export>

</package>
